--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "@nestjs/core": "^8.4.1",
     "@nestjs/microservices": "^8.4.1",
     "@nestjs/platform-express": "^8.4.1",
+    "@nestjs/sequelize": "^8.0.0",
+    "class-validator": "^0.13.2",
+    "mysql2": "^2.3.3",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "sequelize": "^6.17.0",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.3",
@@ -37,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "@types/sequelize": "^4.28.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
