--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nestjs/common": "^8.4.1",
     "@nestjs/core": "^8.4.1",
     "@nestjs/microservices": "^8.4.1",
+    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.4.1",
     "@nestjs/sequelize": "^8.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "mongoose": "^6.2.7",
     "mysql2": "^2.3.3",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
